@@ -1,18 +1,12 @@
-FROM amazoncorretto:17
-RUN jlink --verbose --strip-java-debug-attributes --no-man-pages \
---no-header-files --compress=2 --output /jre \
---add-modules java.base,java.compiler,java.desktop,java.instrument,java.prefs,java.rmi,java.scripting,\
-java.security.jgss,java.security.sasl,java.sql.rowset,jdk.attach,jdk.httpserver,jdk.jdi,jdk.jfr,\
-jdk.management,jdk.net,jdk.unsupported,jdk.crypto.ec
-
-FROM debian:bullseye-slim
+FROM finos/symphony-wdk:1.5.0
 WORKDIR /data/symphony
-COPY --from=0 /jre /jre
-COPY workflow-bot-app.jar app.jar
+ENV GH_URI=https://github.com/SymphonyPlatformSolutions/wdk-federation-client/releases/download/
+RUN mkdir staging && wget $GH_URI/1.0.1/wdk-federation-client.jar -P staging && wget $GH_URI/1.0.1/java-jwt-4.4.0.jar -P staging
 COPY lib/wdk-studio.jar staging/wdk-studio.jar
 COPY lib/symphony-bdk-app-spring-boot-starter*.jar staging/bdk-app-starter.jar
 COPY application.yaml application.yaml
+EXPOSE 8080
 ENTRYPOINT [ \
   "/bin/sh", "-c", \
-  "mkdir -p lib && cp staging/* lib/ && /jre/bin/java -jar app.jar --spring.profiles.active=prod" \
+  "mkdir -p lib && cp staging/* lib/ && /custom/jre/bin/java -jar /wdk.jar --spring.profiles.active=prod" \
 ]
